# Hogwarts_DB_SQL

./: README.md  connection.py  init_query.py  init_table.py  insert_data.py  pyproject.toml
